--- a/SAPPricing/SAPPricing/App.QA.config
+++ b/SAPPricing/SAPPricing/App.QA.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="SAPPricing.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-    </startup>
-	<!--<runtime>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="SAPPricing.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+  </startup>
+  <!--<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
 				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
@@ -16,22 +16,22 @@
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>-->
-    <applicationSettings>
-        <SAPPricing.Properties.Settings>
-            <setting name="BlobDirectoryPrefix" serializeAs="String">
-                <value>source/pricing/</value>
-            </setting>
-            <setting name="DestDirectory" serializeAs="String">
-                <value>source/process/pricing/</value>
-            </setting>
-            <setting name="ContainerName" serializeAs="String">
-                <value>source</value>
-            </setting>
-            <setting name="KeyVaultURI" serializeAs="String">
-                <value>__KeyVaultURI__</value>
-            </setting>
-        </SAPPricing.Properties.Settings>
-    </applicationSettings>
+  <applicationSettings>
+    <SAPPricing.Properties.Settings>
+      <setting name="BlobDirectoryPrefix" serializeAs="String">
+        <value>source/pricing/</value>
+      </setting>
+      <setting name="DestDirectory" serializeAs="String">
+        <value>source/process/pricing/</value>
+      </setting>
+      <setting name="ContainerName" serializeAs="String">
+        <value>source</value>
+      </setting>
+      <setting name="KeyVaultURI" serializeAs="String">
+        <value>https://kv-gccb-ope-qas.vault.azure.net/</value>
+      </setting>
+    </SAPPricing.Properties.Settings>
+  </applicationSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
